fix cta overlap

--- a/assets/src/sass/partials/_footer.scss
+++ b/assets/src/sass/partials/_footer.scss
@@ -1,9 +1,6 @@
 footer {
   display: flex;
   justify-content: space-between;
-  &.has-cta {
-    // margin-bottom: $footer-height-mobile;
-  }
   p {
     line-height: 2;
     font-size: 10px;
@@ -61,7 +58,6 @@ footer {
       display: flex;
       justify-content: space-between;
       padding: 0 30px;
-      margin-bottom: $footer-height-mobile;
       text-align: center;
       flex-wrap: wrap;
       img {
@@ -74,9 +70,6 @@ footer {
     flex-direction: column;
     display: flex;
     align-items: center;
-    &.has-cta {
-      // margin-bottom: $footer-height-pc;
-    }
     p {
       font-size: 12px;
       text-align: left;
@@ -89,7 +82,6 @@ footer {
       justify-content: flex-end;
       align-items: center;
       padding: 0 30px;
-      margin-bottom: $footer-height-pc;
       img {
         height: 33px;
         margin: 0 25px;
